--- a/src/View/Read.fxml
+++ b/src/View/Read.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="202.0" prefWidth="488.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.ReadController">
+<AnchorPane prefHeight="202.0" prefWidth="488.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ReadController">
    <children>
       <GridPane layoutX="16.0" layoutY="-2.0" prefHeight="205.0" prefWidth="445.0">
         <columnConstraints>
@@ -57,12 +57,12 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <TextField prefHeight="39.0" prefWidth="203.0">
+                  <TextField fx:id="txt_username" prefHeight="39.0" prefWidth="203.0">
                      <GridPane.margin>
                         <Insets left="10.0" />
                      </GridPane.margin>
                   </TextField>
-                  <Button fx:id="search_btn" mnemonicParsing="false" onAction="#SearchUsr" prefHeight="27.0" prefWidth="86.0" text="Search" GridPane.columnIndex="1">
+                  <Button fx:id="btn_search" mnemonicParsing="false" onAction="#SearchUsr" prefHeight="27.0" prefWidth="86.0" text="Search" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin>
