--- a/src/View/Rud.fxml
+++ b/src/View/Rud.fxml
@@ -4,26 +4,25 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SeparatorMenuItem?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.RUDController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
         <Menu mnemonicParsing="false" text="File">
           <items>
-            <MenuItem mnemonicParsing="false" text="Edit Profile" />
-            <MenuItem mnemonicParsing="false" text="Search" />
+            <MenuItem fx:id="btn_edit" mnemonicParsing="false" onAction="#EditProfile" text="Edit Profile" />
+            <MenuItem fx:id="btn_search" mnemonicParsing="false" onAction="#SearchFunction" text="Search" />
                   <SeparatorMenuItem mnemonicParsing="false" />
-                  <MenuItem mnemonicParsing="false" text="Delete Profile" />
+                  <MenuItem fx:id="btn_delete" mnemonicParsing="false" onAction="#DeleteUser" text="Delete Profile" />
           </items>
         </Menu>
         <Menu mnemonicParsing="false" text="Help">
           <items>
-            <MenuItem mnemonicParsing="false" text="About us" />
+            <MenuItem fx:id="btn_about" mnemonicParsing="false" text="About us" />
           </items>
         </Menu>
       </menus>
