--- a/src/View/sample.fxml
+++ b/src/View/sample.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -12,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Controller">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Controller">
   <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="144.66665649414062" minWidth="10.0" prefWidth="11.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="362.0" minWidth="10.0" prefWidth="219.33331298828125" />
@@ -38,7 +39,7 @@
             </HBox>
             <TextField fx:id="txt_new_username" prefHeight="26.0" prefWidth="50.0" promptText="User name" />
             <TextField fx:id="txt_user_city" layoutX="10.0" layoutY="116.0" prefHeight="26.0" prefWidth="50.0" promptText="City" />
-            <TextField fx:id="txt_new_user_password" promptText="Password" />
+            <PasswordField fx:id="txt_new_user_password" promptText="Password" />
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="25.0">
                <children>
                   <Label text="Date of Birth:" />
@@ -63,7 +64,7 @@
       <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
          <children>
             <TextField fx:id="txt_id_user" prefHeight="25.0" prefWidth="112.0" promptText="Username" />
-            <TextField fx:id="txt_id_password" prefHeight="25.0" prefWidth="112.0" promptText="Password" />
+            <PasswordField fx:id="txt_id_password" prefHeight="25.0" prefWidth="122.0" promptText="Password" />
             <Button fx:id="btn_login" mnemonicParsing="false" onAction="#login" text="Login" />
          </children>
       </HBox>
