--- a/src/View/sample.fxml
+++ b/src/View/sample.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Controller">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Controller">
   <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="144.66665649414062" minWidth="10.0" prefWidth="11.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="362.0" minWidth="10.0" prefWidth="219.33331298828125" />
@@ -33,13 +33,13 @@
             <Label graphicTextGap="6.0" text="Create a New Account" />
             <HBox prefHeight="28.0" prefWidth="87.0" spacing="10.0">
                <children>
-                  <TextField fx:id="txt_user_first_name" promptText="First name" />
-                  <TextField fx:id="txt_user_last_name" promptText="Last name" />
+                  <TextField fx:id="txt_user_first_name" onKeyReleased="#onKeyReleasedSignUp" promptText="First name" />
+                  <TextField fx:id="txt_user_last_name" onKeyReleased="#onKeyReleasedSignUp" promptText="Last name" />
                </children>
             </HBox>
-            <TextField fx:id="txt_new_username" prefHeight="26.0" prefWidth="50.0" promptText="User name" />
-            <TextField fx:id="txt_user_city" layoutX="10.0" layoutY="116.0" prefHeight="26.0" prefWidth="50.0" promptText="City" />
-            <PasswordField fx:id="txt_new_user_password" promptText="Password" />
+            <TextField fx:id="txt_new_username" onKeyReleased="#onKeyReleasedSignUp" prefHeight="26.0" prefWidth="50.0" promptText="User name" />
+            <TextField fx:id="txt_user_city" layoutX="10.0" layoutY="116.0" onKeyReleased="#onKeyReleasedSignUp" prefHeight="26.0" prefWidth="50.0" promptText="City" />
+            <PasswordField fx:id="txt_new_user_password" onKeyReleased="#onKeyReleasedSignUp" promptText="Password" />
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="25.0">
                <children>
                   <Label text="Date of Birth:" />
@@ -56,16 +56,16 @@
          <padding>
             <Insets top="40.0" />
          </padding></VBox>
-      <Button fx:id="btn_sign_up" layoutX="473.0" layoutY="44.0" mnemonicParsing="false" onAction="#signUp" text="Sign Up" GridPane.columnIndex="2" GridPane.rowIndex="3">
+      <Button fx:id="btn_sign_up" disable="true" layoutX="473.0" layoutY="44.0" mnemonicParsing="false" onAction="#signUp" text="Sign Up" GridPane.columnIndex="2" GridPane.rowIndex="3">
          <GridPane.margin>
             <Insets left="100.0" />
          </GridPane.margin>
       </Button>
       <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
          <children>
-            <TextField fx:id="txt_id_user" prefHeight="25.0" prefWidth="112.0" promptText="Username" />
-            <PasswordField fx:id="txt_id_password" prefHeight="25.0" prefWidth="122.0" promptText="Password" />
-            <Button fx:id="btn_login" mnemonicParsing="false" onAction="#login" text="Login" />
+            <TextField fx:id="txt_id_user" onKeyReleased="#onKeyReleasedLogin" prefHeight="25.0" prefWidth="112.0" promptText="Username" />
+            <PasswordField fx:id="txt_id_password" onKeyReleased="#onKeyReleasedLogin" prefHeight="25.0" prefWidth="122.0" promptText="Password" />
+            <Button fx:id="btn_login" disable="true" mnemonicParsing="false" onAction="#login" text="Login" />
          </children>
       </HBox>
    </children>
