--- a/src/View/sample.fxml
+++ b/src/View/sample.fxml
@@ -13,59 +13,62 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Controller">
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="362.0" minWidth="10.0" prefWidth="219.33331298828125" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="325.66668701171875" minWidth="10.0" prefWidth="325.66668701171875" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints maxHeight="128.66665649414062" minHeight="10.0" prefHeight="28.666656494140625" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="155.0" minHeight="0.0" prefHeight="43.333343505859375" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="278.6666564941406" minHeight="10.0" prefHeight="278.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="155.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="24.66668701171875" minHeight="10.0" prefHeight="12.0" vgrow="SOMETIMES" />
-  </rowConstraints>
-   <children>
-      <ImageView fx:id="img_logo" fitHeight="242.0" fitWidth="273.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="2" />
-      <VBox alignment="TOP_CENTER" prefHeight="252.0" prefWidth="64.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
-         <children>
-            <Label graphicTextGap="6.0" text="Create a New Account" />
-            <HBox prefHeight="28.0" prefWidth="87.0" spacing="10.0">
-               <children>
-                  <TextField fx:id="txt_user_first_name" onKeyReleased="#onKeyReleasedSignUp" promptText="First name" />
-                  <TextField fx:id="txt_user_last_name" onKeyReleased="#onKeyReleasedSignUp" promptText="Last name" />
-               </children>
-            </HBox>
-            <TextField fx:id="txt_new_username" onKeyReleased="#onKeyReleasedSignUp" prefHeight="26.0" prefWidth="50.0" promptText="User name" />
-            <TextField fx:id="txt_user_city" layoutX="10.0" layoutY="116.0" onKeyReleased="#onKeyReleasedSignUp" prefHeight="26.0" prefWidth="50.0" promptText="City" />
-            <PasswordField fx:id="txt_new_user_password" onKeyReleased="#onKeyReleasedSignUp" promptText="Password" />
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="25.0">
-               <children>
-                  <Label text="Date of Birth:" />
-                  <DatePicker fx:id="date_picker" onMouseClicked="#onKeyReleasedSignUp" prefHeight="26.0" prefWidth="130.0" />
-               </children>
-            </HBox>
-         </children>
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-         <GridPane.margin>
-            <Insets right="50.0" />
-         </GridPane.margin>
-         <padding>
-            <Insets top="40.0" />
-         </padding></VBox>
-      <Button fx:id="btn_sign_up" disable="true" layoutX="473.0" layoutY="44.0" mnemonicParsing="false" onAction="#signUp" text="Sign Up" GridPane.columnIndex="1" GridPane.rowIndex="3">
-         <GridPane.margin>
-            <Insets left="100.0" />
-         </GridPane.margin>
-      </Button>
-      <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-         <children>
-            <TextField fx:id="txt_id_user" onKeyReleased="#onKeyReleasedLogin" prefHeight="25.0" prefWidth="112.0" promptText="Username" />
-            <PasswordField fx:id="txt_id_password" onKeyReleased="#onKeyReleasedLogin" prefHeight="25.0" prefWidth="122.0" promptText="Password" />
-            <Button fx:id="btn_login" disable="true" mnemonicParsing="false" onAction="#login" text="Login" />
-         </children>
-      </HBox>
-   </children>
+<GridPane fx:id="grid_pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Controller">
+    <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="362.0" minWidth="10.0" prefWidth="219.33331298828125" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="325.66668701171875" minWidth="10.0" prefWidth="325.66668701171875" />
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints maxHeight="128.66665649414062" minHeight="10.0" prefHeight="28.666656494140625" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="155.0" minHeight="0.0" prefHeight="43.333343505859375" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="278.6666564941406" minHeight="10.0" prefHeight="278.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="155.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="24.66668701171875" minHeight="10.0" prefHeight="12.0" vgrow="SOMETIMES" />
+    </rowConstraints>
+    <children>
+        <ImageView fx:id="img_logo" fitHeight="242.0" fitWidth="273.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="2" />
+        <VBox alignment="TOP_CENTER" prefHeight="252.0" prefWidth="64.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <children>
+                <Label graphicTextGap="6.0" text="Create a New Account" />
+                <HBox prefHeight="28.0" prefWidth="87.0" spacing="10.0">
+                    <children>
+                        <TextField fx:id="txt_user_first_name" onKeyReleased="#onKeyReleasedSignUp" promptText="First name" />
+                        <TextField fx:id="txt_user_last_name" onKeyReleased="#onKeyReleasedSignUp" promptText="Last name" />
+                    </children>
+                </HBox>
+                <TextField fx:id="txt_new_username" onKeyReleased="#onKeyReleasedSignUp" prefHeight="26.0" prefWidth="50.0" promptText="User name" />
+                <TextField fx:id="txt_user_city" layoutX="10.0" layoutY="116.0" onKeyReleased="#onKeyReleasedSignUp" prefHeight="26.0" prefWidth="50.0" promptText="City" />
+                <PasswordField fx:id="txt_new_user_password" onKeyReleased="#onKeyReleasedSignUp" promptText="Password" />
+                <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="25.0">
+                    <children>
+                        <Label text="Date of Birth:" />
+                        <DatePicker fx:id="date_picker" prefHeight="26.0" prefWidth="130.0" />
+                    </children>
+                </HBox>
+            </children>
+            <opaqueInsets>
+                <Insets />
+            </opaqueInsets>
+            <GridPane.margin>
+                <Insets right="50.0" />
+            </GridPane.margin>
+            <padding>
+                <Insets top="40.0" />
+            </padding></VBox>
+        <Button fx:id="btn_sign_up" disable="true" layoutX="473.0" layoutY="44.0" mnemonicParsing="false" onAction="#signUp" text="Sign Up" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <GridPane.margin>
+                <Insets left="100.0" />
+            </GridPane.margin>
+        </Button>
+        <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <children>
+                <TextField fx:id="txt_id_user" onKeyReleased="#onKeyReleasedLogin" prefHeight="25.0" prefWidth="112.0" promptText="Username">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets></TextField>
+                <PasswordField fx:id="txt_id_password" onKeyReleased="#onKeyReleasedLogin" prefHeight="25.0" prefWidth="122.0" promptText="Password" />
+                <Button fx:id="btn_login" disable="true" mnemonicParsing="false" onAction="#login" text="Login" />
+            </children>
+        </HBox>
+    </children>
 </GridPane>
