--- a/src/View/Rud.fxml
+++ b/src/View/Rud.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.RUDController">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.RUDController">
   <children>
-    <MenuBar VBox.vgrow="NEVER">
+    <MenuBar fx:id="menu" VBox.vgrow="NEVER">
       <menus>
         <Menu mnemonicParsing="false" text="File">
           <items>
@@ -18,6 +18,8 @@
             <MenuItem fx:id="btn_search" mnemonicParsing="false" onAction="#SearchFunction" text="Search" />
                   <SeparatorMenuItem mnemonicParsing="false" />
                   <MenuItem fx:id="btn_delete" mnemonicParsing="false" onAction="#DeleteUser" text="Delete Profile" />
+                  <SeparatorMenuItem mnemonicParsing="false" />
+                  <MenuItem fx:id="btn_sign_out" mnemonicParsing="false" onAction="#sign_out" text="Sign out" />
           </items>
         </Menu>
         <Menu mnemonicParsing="false" text="Help">
@@ -29,7 +31,7 @@
     </MenuBar>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="391.0" prefWidth="654.0" VBox.vgrow="ALWAYS">
          <children>
-            <ImageView fitHeight="375.0" fitWidth="529.0" layoutX="56.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="iv_about" fitHeight="384.0" fitWidth="619.0" layoutX="21.0" pickOnBounds="true" preserveRatio="true">
                <image>
                    <!--
                   <Image url="@about_company.jpg" />
