--- a/src/View/Update.fxml
+++ b/src/View/Update.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -9,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="Controller.UpdateController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.UpdateController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -18,8 +19,10 @@
   <rowConstraints>
     <RowConstraints maxHeight="52.666656494140625" minHeight="10.0" prefHeight="49.33332824707031" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="95.33334350585938" minHeight="10.0" prefHeight="67.00001525878906" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="95.33334350585938" minHeight="10.0" prefHeight="67.00001525878906" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="95.33334350585938" minHeight="10.0" prefHeight="76.0" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="104.66668701171875" minHeight="10.0" prefHeight="69.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="96.0" minHeight="10.0" prefHeight="63.66668701171875" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="96.0" minHeight="10.0" prefHeight="63.66668701171875" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="135.33331298828125" minHeight="10.0" prefHeight="44.333343505859375" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -38,46 +41,64 @@
             <Insets bottom="30.0" left="50.0" />
          </padding>
       </Label>
-      <Label layoutX="10.0" layoutY="137.0" text="First Name" GridPane.rowIndex="2">
+      <Label layoutX="10.0" layoutY="137.0" text="First Name" GridPane.rowIndex="3">
          <padding>
             <Insets bottom="30.0" left="50.0" />
          </padding>
       </Label>
-      <Label layoutX="10.0" layoutY="124.0" text="Last Name" GridPane.rowIndex="3">
+      <Label layoutX="10.0" layoutY="124.0" text="Last Name" GridPane.rowIndex="4">
          <padding>
             <Insets bottom="30.0" left="50.0" />
          </padding>
       </Label>
-      <Label layoutX="10.0" layoutY="190.0" text="City" GridPane.rowIndex="4">
+      <Label layoutX="10.0" layoutY="190.0" text="City" GridPane.rowIndex="5">
          <padding>
             <Insets bottom="30.0" left="50.0" />
          </padding>
       </Label>
-      <Button fx:id="btn_edit" mnemonicParsing="false" text="Edit" GridPane.columnIndex="1" GridPane.rowIndex="5">
+      <Button fx:id="btn_edit" mnemonicParsing="false" onAction="#edit" text="Edit" GridPane.columnIndex="1" GridPane.rowIndex="7">
          <GridPane.margin>
             <Insets left="79.0" />
          </GridPane.margin>
       </Button>
       <TextField fx:id="txt_username" prefHeight="25.0" prefWidth="172.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <GridPane.margin>
-            <Insets bottom="29.0" />
+            <Insets bottom="30.0" />
          </GridPane.margin>
       </TextField>
-      <TextField fx:id="txt_firstname" layoutX="210.0" layoutY="66.0" prefHeight="25.0" prefWidth="172.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+      <TextField fx:id="txt_firstname" layoutX="210.0" layoutY="66.0" prefHeight="25.0" prefWidth="172.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
          <GridPane.margin>
-            <Insets bottom="27.0" />
+            <Insets bottom="32.0" />
          </GridPane.margin>
       </TextField>
-      <TextField fx:id="txt_lastname" layoutX="210.0" layoutY="138.0" prefHeight="25.0" prefWidth="172.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
-         <GridPane.margin>
-            <Insets bottom="25.0" />
-         </GridPane.margin>
-      </TextField>
-      <TextField fx:id="txt_city" layoutX="210.0" layoutY="212.0" prefHeight="25.0" prefWidth="172.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+      <TextField fx:id="txt_lastname" layoutX="210.0" layoutY="138.0" prefHeight="25.0" prefWidth="172.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
          <GridPane.margin>
             <Insets bottom="30.0" />
          </GridPane.margin>
       </TextField>
+      <TextField fx:id="txt_city" layoutX="210.0" layoutY="212.0" prefHeight="25.0" prefWidth="172.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+         <GridPane.margin>
+            <Insets bottom="25.0" />
+         </GridPane.margin>
+      </TextField>
+      <Label text="Password" GridPane.rowIndex="2">
+         <padding>
+            <Insets bottom="30.0" left="50.0" />
+         </padding>
+      </Label>
+      <TextField fx:id="txt_password" prefHeight="25.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+         <GridPane.margin>
+            <Insets bottom="28.0" />
+         </GridPane.margin></TextField>
+      <Label text="Date of Birth:" GridPane.rowIndex="6">
+         <padding>
+            <Insets bottom="30.0" left="50.0" />
+         </padding>
+      </Label>
+      <DatePicker fx:id="datePicker_date_of_birth" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="6">
+         <GridPane.margin>
+            <Insets bottom="25.0" />
+         </GridPane.margin></DatePicker>
    </children>
    <opaqueInsets>
       <Insets />
