--- a/src/View/Read.fxml
+++ b/src/View/Read.fxml
@@ -43,7 +43,10 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label prefHeight="34.0" prefWidth="84.0" text="Username:" GridPane.columnIndex="1" />
+                  <Label prefHeight="34.0" prefWidth="84.0" text="Username:" GridPane.columnIndex="1">
+                     <font>
+                        <Font size="14.0" />
+                     </font></Label>
                </children>
             </GridPane>
             <GridPane prefHeight="94.0" prefWidth="383.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
@@ -66,6 +69,9 @@
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin>
+                     <font>
+                        <Font size="14.0" />
+                     </font>
                   </Button>
                </children>
             </GridPane>
