--- a/src/View/Update.fxml
+++ b/src/View/Update.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.Glow?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -12,9 +14,9 @@
 
 <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.UpdateController">
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="194.0" minWidth="10.0" prefWidth="127.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="303.0" minWidth="10.0" prefWidth="193.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="280.0" minWidth="10.0" prefWidth="274.0" />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints maxHeight="52.666656494140625" minHeight="10.0" prefHeight="49.33332824707031" vgrow="SOMETIMES" />
@@ -25,17 +27,8 @@
       <RowConstraints maxHeight="96.0" minHeight="10.0" prefHeight="63.66668701171875" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="96.0" minHeight="10.0" prefHeight="63.66668701171875" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="135.33331298828125" minHeight="10.0" prefHeight="44.333343505859375" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label text="Update your Profile" GridPane.columnIndex="1">
-         <padding>
-            <Insets left="37.0" />
-         </padding>
-         <font>
-            <Font name="Arial" size="16.0" />
-         </font>
-      </Label>
       <Label text="User Name" GridPane.rowIndex="1">
          <padding>
             <Insets bottom="30.0" left="50.0" />
@@ -95,10 +88,22 @@
             <Insets bottom="30.0" left="50.0" />
          </padding>
       </Label>
-      <DatePicker fx:id="datePicker_date_of_birth" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="6">
+      <DatePicker fx:id="datePicker_date_of_birth" editable="false" prefHeight="25.0" prefWidth="195.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
          <GridPane.margin>
             <Insets bottom="25.0" />
          </GridPane.margin></DatePicker>
+      <Label prefHeight="114.0" prefWidth="197.0" text="Update your profile" textFill="#2ab91a" textOverrun="CLIP" GridPane.columnIndex="1">
+         <font>
+            <Font size="20.0" />
+         </font>
+         <effect>
+            <Glow level="0.75" />
+         </effect>
+         <GridPane.margin>
+            <Insets left="15.0" />
+         </GridPane.margin>
+      </Label>
+      <ImageView fx:id="img_logo" fitHeight="242.0" fitWidth="273.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="3" />
    </children>
    <opaqueInsets>
       <Insets />
