--- a/src/View/sample.fxml
+++ b/src/View/sample.fxml
@@ -6,13 +6,14 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.Glow?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <GridPane fx:id="grid_pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Controller">
     <columnConstraints>
@@ -30,22 +31,45 @@
         <ImageView fx:id="img_logo" fitHeight="242.0" fitWidth="273.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="2" />
         <VBox alignment="TOP_CENTER" prefHeight="252.0" prefWidth="64.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
             <children>
-                <Label graphicTextGap="6.0" text="Create a New Account" />
+            <Label prefHeight="114.0" prefWidth="334.0" text="Create a New Account" textFill="#2ab91a" textOverrun="CLIP">
+               <font>
+                  <Font size="20.0" />
+               </font>
+               <effect>
+                  <Glow level="0.75" />
+               </effect>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+               <padding>
+                  <Insets left="40.0" />
+               </padding>
+            </Label>
                 <HBox prefHeight="28.0" prefWidth="87.0" spacing="10.0">
                     <children>
                         <TextField fx:id="txt_user_first_name" onKeyReleased="#onKeyReleasedSignUp" promptText="First name" />
                         <TextField fx:id="txt_user_last_name" onKeyReleased="#onKeyReleasedSignUp" promptText="Last name" />
                     </children>
                 </HBox>
-                <TextField fx:id="txt_new_username" onKeyReleased="#onKeyReleasedSignUp" prefHeight="26.0" prefWidth="50.0" promptText="User name" />
-                <TextField fx:id="txt_user_city" layoutX="10.0" layoutY="116.0" onKeyReleased="#onKeyReleasedSignUp" prefHeight="26.0" prefWidth="50.0" promptText="City" />
-                <PasswordField fx:id="txt_new_user_password" onKeyReleased="#onKeyReleasedSignUp" promptText="Password" />
                 <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="25.0">
                     <children>
-                        <Label text="Date of Birth:" />
+                  <Label prefHeight="37.0" prefWidth="100.0" text="Date of Birth" textFill="#2ab91a" textOverrun="CLIP">
+                     <effect>
+                        <Glow level="0.75" />
+                     </effect>
+                     <padding>
+                        <Insets left="15.0" />
+                     </padding>
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
                         <DatePicker fx:id="date_picker" prefHeight="26.0" prefWidth="130.0" />
                     </children>
                 </HBox>
+                <TextField fx:id="txt_new_username" onKeyReleased="#onKeyReleasedSignUp" prefHeight="26.0" prefWidth="50.0" promptText="User name" />
+                <PasswordField fx:id="txt_new_user_password" onKeyReleased="#onKeyReleasedSignUp" promptText="Password" />
+                <TextField fx:id="txt_user_city" layoutX="10.0" layoutY="116.0" onKeyReleased="#onKeyReleasedSignUp" prefHeight="26.0" prefWidth="50.0" promptText="City" />
             </children>
             <opaqueInsets>
                 <Insets />
