--- a/src/View/Update.fxml
+++ b/src/View/Update.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.UpdateController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.UpdateController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="194.0" minWidth="10.0" prefWidth="127.0" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="303.0" minWidth="10.0" prefWidth="193.0" />
@@ -29,25 +29,19 @@
     <RowConstraints maxHeight="135.33331298828125" minHeight="10.0" prefHeight="44.333343505859375" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label text="User Name" GridPane.rowIndex="1">
-         <padding>
-            <Insets bottom="30.0" left="50.0" />
-         </padding>
-      </Label>
-      <Label layoutX="10.0" layoutY="137.0" text="First Name" GridPane.rowIndex="3">
-         <padding>
-            <Insets bottom="30.0" left="50.0" />
-         </padding>
-      </Label>
-      <Label layoutX="10.0" layoutY="124.0" text="Last Name" GridPane.rowIndex="4">
-         <padding>
-            <Insets bottom="30.0" left="50.0" />
-         </padding>
-      </Label>
-      <Label layoutX="10.0" layoutY="190.0" text="City" GridPane.rowIndex="5">
-         <padding>
-            <Insets bottom="30.0" left="50.0" />
-         </padding>
+      <Label prefHeight="114.0" prefWidth="197.0" text="Username" textFill="#2ab91a" textOverrun="CLIP" GridPane.rowIndex="1">
+         <font>
+            <Font size="20.0" />
+         </font>
+         <effect>
+            <Glow level="0.75" />
+         </effect>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+         <GridPane.margin>
+            <Insets bottom="10.0" left="20.0" />
+         </GridPane.margin>
       </Label>
       <Button fx:id="btn_edit" mnemonicParsing="false" onAction="#edit" text="Edit" GridPane.columnIndex="1" GridPane.rowIndex="7">
          <GridPane.margin>
@@ -56,41 +50,31 @@
       </Button>
       <TextField fx:id="txt_username" prefHeight="25.0" prefWidth="172.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <GridPane.margin>
-            <Insets bottom="30.0" />
+            <Insets bottom="10.0" />
          </GridPane.margin>
       </TextField>
       <TextField fx:id="txt_firstname" layoutX="210.0" layoutY="66.0" prefHeight="25.0" prefWidth="172.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
          <GridPane.margin>
-            <Insets bottom="32.0" />
+            <Insets bottom="22.0" />
          </GridPane.margin>
       </TextField>
       <TextField fx:id="txt_lastname" layoutX="210.0" layoutY="138.0" prefHeight="25.0" prefWidth="172.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
          <GridPane.margin>
-            <Insets bottom="30.0" />
+            <Insets bottom="20.0" />
          </GridPane.margin>
       </TextField>
       <TextField fx:id="txt_city" layoutX="210.0" layoutY="212.0" prefHeight="25.0" prefWidth="172.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
          <GridPane.margin>
-            <Insets bottom="25.0" />
+            <Insets bottom="15.0" />
          </GridPane.margin>
       </TextField>
-      <Label text="Password" GridPane.rowIndex="2">
-         <padding>
-            <Insets bottom="30.0" left="50.0" />
-         </padding>
-      </Label>
       <TextField fx:id="txt_password" prefHeight="25.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <GridPane.margin>
-            <Insets bottom="28.0" />
+            <Insets bottom="18.0" />
          </GridPane.margin></TextField>
-      <Label text="Date of Birth:" GridPane.rowIndex="6">
-         <padding>
-            <Insets bottom="30.0" left="50.0" />
-         </padding>
-      </Label>
       <DatePicker fx:id="datePicker_date_of_birth" editable="false" prefHeight="25.0" prefWidth="195.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
          <GridPane.margin>
-            <Insets bottom="25.0" />
+            <Insets bottom="15.0" />
          </GridPane.margin></DatePicker>
       <Label prefHeight="114.0" prefWidth="197.0" text="Update your profile" textFill="#2ab91a" textOverrun="CLIP" GridPane.columnIndex="1">
          <font>
@@ -104,6 +88,61 @@
          </GridPane.margin>
       </Label>
       <ImageView fx:id="img_logo" fitHeight="242.0" fitWidth="273.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+      <Label prefHeight="114.0" prefWidth="197.0" text="Password" textFill="#2ab91a" textOverrun="CLIP" GridPane.rowIndex="2">
+         <font>
+            <Font size="20.0" />
+         </font>
+         <effect>
+            <Glow level="0.75" />
+         </effect>
+         <GridPane.margin>
+            <Insets bottom="18.0" left="18.0" />
+         </GridPane.margin>
+      </Label>
+      <Label prefHeight="114.0" prefWidth="197.0" text="First Name" textFill="#2ab91a" textOverrun="CLIP" GridPane.rowIndex="3">
+         <font>
+            <Font size="20.0" />
+         </font>
+         <effect>
+            <Glow level="0.75" />
+         </effect>
+         <GridPane.margin>
+            <Insets bottom="12.0" left="20.0" />
+         </GridPane.margin>
+      </Label>
+      <Label prefHeight="114.0" prefWidth="197.0" text="Last Name" textFill="#2ab91a" textOverrun="CLIP" GridPane.rowIndex="4">
+         <font>
+            <Font size="20.0" />
+         </font>
+         <effect>
+            <Glow level="0.75" />
+         </effect>
+         <GridPane.margin>
+            <Insets bottom="16.0" left="22.0" />
+         </GridPane.margin>
+      </Label>
+      <Label prefHeight="36.0" prefWidth="53.0" text="City" textFill="#2ab91a" textOverrun="CLIP" GridPane.rowIndex="5">
+         <font>
+            <Font size="20.0" />
+         </font>
+         <effect>
+            <Glow level="0.75" />
+         </effect>
+         <GridPane.margin>
+            <Insets bottom="15.0" left="37.0" />
+         </GridPane.margin>
+      </Label>
+      <Label prefHeight="114.0" prefWidth="197.0" text="Birthdate" textFill="#2ab91a" textOverrun="CLIP" GridPane.rowIndex="6">
+         <font>
+            <Font size="20.0" />
+         </font>
+         <effect>
+            <Glow level="0.75" />
+         </effect>
+         <GridPane.margin>
+            <Insets bottom="17.0" left="20.0" />
+         </GridPane.margin>
+      </Label>
    </children>
    <opaqueInsets>
       <Insets />
