--- a/src/View/sample.fxml
+++ b/src/View/sample.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -15,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="grid_pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Controller">
+<GridPane fx:id="grid_pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="534.0" prefWidth="874.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Controller">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="362.0" minWidth="10.0" prefWidth="219.33331298828125" />
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="325.66668701171875" minWidth="10.0" prefWidth="325.66668701171875" />
@@ -95,5 +96,9 @@
                 <Button fx:id="btn_login" disable="true" mnemonicParsing="false" onAction="#login" text="Login" />
             </children>
         </HBox>
+      <Hyperlink fx:id="guest_btn" onAction="#OpenVacationPanel" prefHeight="29.0" prefWidth="178.0" text="Continue as guest" GridPane.rowIndex="3">
+         <padding>
+            <Insets left="20.0" />
+         </padding></Hyperlink>
     </children>
 </GridPane>
