--- a/src/View/VacationDelete.fxml
+++ b/src/View/VacationDelete.fxml
@@ -1,52 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.VacationDeleteController">
+<VBox prefHeight="650.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.VacationDeleteController">
   <children>
-      <GridPane prefHeight="447.0" prefWidth="728.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="234.33331298828125" minWidth="10.0" prefWidth="67.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="491.33331298828125" minWidth="10.0" prefWidth="491.33331298828125" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.3333740234375" minWidth="10.0" prefWidth="75.66668701171875" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints maxHeight="120.33334350585938" minHeight="4.3333282470703125" prefHeight="66.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="272.3333435058594" minHeight="10.0" prefHeight="272.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="92.33331298828125" minHeight="10.0" prefHeight="41.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="91.66665649414062" minHeight="10.0" prefHeight="45.66668701171875" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Text fill="#0099ff" strokeType="OUTSIDE" strokeWidth="0.0" text="Delete Vacation" GridPane.columnIndex="1">
-               <font>
-                  <Font name="Guttman Frnew" size="25.0" />
-               </font>
-               <GridPane.margin>
-                  <Insets left="150.0" />
-               </GridPane.margin>
-            </Text>
-            <TableView fx:id="table" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Button fx:id="btn_submit" mnemonicParsing="false" onAction="#deleteVacation" prefHeight="25.0" prefWidth="92.0" text="Submit" GridPane.columnIndex="1" GridPane.rowIndex="3">
-               <GridPane.margin>
-                  <Insets left="190.0" />
-               </GridPane.margin>
-            </Button>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Choose index of vacation to delete:" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField prefHeight="25.0" prefWidth="425.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
-               <opaqueInsets>
-                  <Insets left="50.0" right="50.0" />
-               </opaqueInsets>
-            </TextField>
-         </children>
-      </GridPane>
+    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+      <children>
+            <TableView fx:id="table" prefHeight="624.0" prefWidth="1280.0" />
+            <TextField fx:id="txt_idxOfVacation" layoutX="583.0" layoutY="632.0" prefHeight="25.0" prefWidth="57.0" />
+            <Button fx:id="btn_delete" layoutX="667.0" layoutY="632.0" mnemonicParsing="false" onAction="#deleteVacation" text="Delete" />
+            <Text layoutX="445.0" layoutY="649.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter Vacation Index:" />
+      </children>
+    </AnchorPane>
   </children>
 </VBox>
